<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_login"
        android:name="com.mobile2app.eventtracker.ui.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_view_event"
        android:name="com.mobile2app.eventtracker.ui.eventviewer.EventViewerFragment"
        android:label="@string/menu_view_event"
        tools:layout="@layout/fragment_eventviewer" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.mobile2app.eventtracker.ui.NotificationFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notification"/>
</navigation>