<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingTop="40dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/edit_event_activity_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="10dp" />

            <EditText
                android:id="@+id/edit_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_event_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:layout_editor_absoluteX="30dp" />

            <EditText
                android:id="@+id/edit_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_event_description"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_event_title"
                tools:ignore="Autofill"
                tools:layout_editor_absoluteX="44dp" />

            <TextView
                android:id="@+id/edit_event_curr_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/event_row_date"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/edit_event_date"
                app:layout_constraintStart_toStartOf="@+id/edit_event_date"
                app:layout_constraintTop_toBottomOf="@+id/edit_event_description" />

            <TextView
                android:id="@+id/edit_event_curr_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/event_row_time"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/edit_event_time"
                app:layout_constraintStart_toStartOf="@+id/edit_event_time"
                app:layout_constraintTop_toBottomOf="@+id/edit_event_description" />

            <Button
                android:id="@+id/edit_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/edit_event_date"
                app:icon="@android:drawable/ic_menu_my_calendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_event_curr_date" />

            <Button
                android:id="@+id/edit_event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/edit_event_time"
                app:icon="@drawable/ic_alarm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_event_curr_time" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-1dp">

        <Button
            android:id="@+id/edit_event_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/md_theme_tertiary"
            android:text="@string/edit_event_confirm" />

        <Button
            android:id="@+id/edit_event_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/md_theme_error"
            android:text="@string/edit_event_cancel" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>