<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/event_row">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/event_row_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/event_row_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/event_row_delete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/event_row_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/event_row_description"
                android:textAlignment="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/event_row_edit"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_row_title"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/event_row_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_row_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/event_row_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/event_row_time"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_row_date" />

            <Button
                android:id="@+id/event_row_delete"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_row="0"
                android:layout_column="2"
                android:text="@string/event_row_delete"
                app:icon="@android:drawable/ic_menu_delete"
                app:iconTint="#FF0000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_row_time" />

            <Button
                android:id="@+id/event_row_edit"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_row="1"
                android:layout_column="2"
                android:text="@string/event_row_edit"
                app:icon="@android:drawable/ic_menu_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_row_delete" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>